--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
-  
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -31,11 +31,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Set up Git Repository
         uses: actions/checkout@v4
-      # - name: Setup TeXLive
-      #   uses: xu-cheng/texlive-action@v2
-      #   with:
-      #     scheme: full
-      #     run: bash ${GITHUB_WORKSPACE}/cv-latex/build
+      - name: Setup TeXLive
+        uses: xu-cheng/texlive-action@v2
+        with:
+          scheme: full
+          run: bash ${GITHUB_WORKSPACE}/cv-latex/build
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
