--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master  # 或您使用的默认分支名称
+  schedule:
+    - cron: '0 6 * * *' # daily at 06:00 UTC (from previous update_pubs workflow)
+  workflow_dispatch: {}
 
 permissions:
   contents: read
@@ -12,9 +15,26 @@ permissions:
 
 
 jobs:
-  deploy:
+  check-changes:
     runs-on: ubuntu-latest
+    outputs:
+      cv: ${{ steps.filter.outputs.cv }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      - name: Detect path changes
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            cv: |
+              cv-latex/**
+
+  compile-cv:
+    needs: check-changes
+    runs-on: ubuntu-latest
+    if: needs.check-changes.outputs.cv == 'true'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -24,7 +44,61 @@ jobs:
         with:
           scheme: full
           run: bash ${GITHUB_WORKSPACE}/cv-latex/build
-          
+
+      - name: Upload CV build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: cv-build
+          path: cv-latex/build
+
+  update-pubs:
+    needs: check-changes
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip
+
+      - name: Run citation updater
+        run: |
+          python3 update_citations.py
+
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add data/pubs.json || true
+          if ! git diff --quiet --staged; then
+            git commit -m "chore: update publication citation counts ($(date -u +%Y-%m-%d))" || true
+            git push origin HEAD:master || true
+          else
+            echo "No changes to commit"
+          fi
+
+  deploy:
+    needs: [check-changes, compile-cv]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download CV build artifact (if any)
+        if: needs.compile-cv.result == 'success'
+        uses: actions/download-artifact@v3
+        with:
+          name: cv-build
+          path: cv-latex/build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
