--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,104 +13,35 @@ permissions:
   pages: write
   id-token: write
 
-
 jobs:
-  check-changes:
+  deploy:
     runs-on: ubuntu-latest
-    outputs:
-      cv: ${{ steps.filter.outputs.cv }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Detect path changes
-        id: filter
-        uses: dorny/paths-filter@v3
-        with:
-          filters: |
-            cv: |
-              cv-latex/**
-
-  compile-cv:
-    needs: check-changes
-    runs-on: ubuntu-latest
-    # Always run this job so deploy waits for it; inside we conditionally do the heavy work
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Check if CV changed
-        id: cv-check
-        run: |
-          echo "cv=${{ needs.check-changes.outputs.cv }}" >> "$GITHUB_OUTPUT"
-
-      - name: Compile CV (only if changed)
-        if: needs.check-changes.outputs.cv == 'true'
+      - name: Compile CV
         uses: xu-cheng/texlive-action@v2
         with:
           scheme: full
           run: bash ${GITHUB_WORKSPACE}/cv-latex/build
-
-      - name: Upload CV PDF artifact (only if changed)
-        if: needs.check-changes.outputs.cv == 'true'
-        uses: actions/upload-artifact@v3
-        with:
-          name: cv-pdf
-          path: cv-latex/build/cv.pdf
-
-  update-pubs:
-    needs: check-changes
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip
-
-      - name: Run citation updater
+        
+      - name: Update citations
         run: |
           cd data/
           python3 update_citations.py
-
-      - name: Commit changes
+      
+      - name: Copy pubs/journals into docs
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/pubs.json || true
-          if ! git diff --quiet --staged; then
-            git commit -m "chore: update publication citation counts ($(date -u +%Y-%m-%d))" || true
-            git push origin HEAD:master || true
-          else
-            echo "No changes to commit"
-          fi
-
-  deploy:
-    needs: [check-changes, compile-cv]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download CV PDF artifact (if CV changed)
-        if: needs.check-changes.outputs.cv == 'true'
-        uses: actions/download-artifact@v3
-        with:
-          name: cv-pdf
-          path: cv-latex/build
+          mkdir -p docs
+          cp data/pubs.json docs/pubs.json || true
+          cp data/journals.json docs/journals.json || true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./
+          path: docs/
 
       - name: Deploy to GitHub Pages
         id: deployment
