--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,15 @@ jobs:
         with:
           path: ./
 
+      - name: Commit CV to repository
+        if: env.NEED_COMPILE == 'true'
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs/resume.pdf
+          git commit -m "Update CV" || echo "No changes to commit"
+          git push
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
