--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,12 +52,11 @@ jobs:
           path: ./
 
       - name: Commit CV to repository
-        if: env.NEED_COMPILE == 'true'
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/resume.pdf
-          git diff --staged --quiet || git commit -m "Update CV [skip ci]"
+          git add .
+          git diff --staged --quiet || git commit -m "Update data"
           git push
 
       - name: Deploy to GitHub Pages
